corrected color contrast

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+/*CHANGE RED,GREEN,MUSTARD COLOR//GRAY IS FINE*/
+
+
+
 /* Global Layout Set-up */
 * {
   box-sizing: border-box;
@@ -8,7 +12,7 @@ body {
   padding: 0;
   text-align: center;
   font-family: 'Open Sans', sans-serif;
-  color: #3A6355;
+  color: #42f4d9;
   background: #2d2b30;
 }
 
@@ -88,18 +92,18 @@ header .name{
   font-weight: 600;
   padding: 20px;
   text-transform: uppercase;
-  color: #781125
+  color: #42e8f4;
 }
 
 .card {
   margin: 30px;
   padding: 20px 40px 40px;
   text-align: left;
-  border-top: 4px solid #781125;
+  border-top: 4px solid #42e8f4;
   clear: both;
 }
 .card:hover {
-  border-color: #96731A;
+  border-color: #f48352;
 }
 
 
@@ -120,7 +124,7 @@ header .name{
 .heading{
   font-size: 2em;
   text-transform: uppercase;
-  color: #781125;
+  color: #42f4d9;
   margin-top: 10px;
 }
 
